k8s/client-concrete-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-concrete-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web-concrete
  template:
    metadata:
      labels:
        component: web-concrete
    spec:
      containers:
        - name: client
          image: itsdevin/bow-mark-client:$COMMIT_SHA1
          resources:
            requests:
              cpu: "250m"
              memory: "500Mi"
            limits:
              cpu: "500m"
              memory: "1000Mi"
          ports:
            - containerPort: 3001
          volumeMounts:
            - mountPath: /app/.env.local
              name: client-concrete-env
              subPath: .env.local
              readOnly: true
      volumes:
        - name: client-concrete-env
          configMap:
            defaultMode: 420
            items:
              - key: .env
                path: .env.local
            name: client-concrete-env
