k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: itsdevin/bow-mark-client:$COMMIT_SHA1
          resources:
            limits:
              cpu: "1"
              memory: "5"
          ports:
            - containerPort: 3000
