k8s/server-concrete-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-concrete-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: server-concrete
  template:
    metadata:
      labels:
        component: server-concrete
    spec:
      containers:
        - name: server
          image: itsdevin/bow-mark-server:$COMMIT_SHA1
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "250m"
              memory: "500Mi"
            limits:
              cpu: "500m"
              memory: "1000Mi"
