k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: itsdevin/bow-mark-server:$COMMIT_SHA1
          resources:
            requests:
              cpu: "250m"
              memory: "500Mi"
            limits:
              cpu: "1000m"
              memory: "2000Mi"
