k8s/client-concrete-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-concrete-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web-concrete
  ports:
    - port: 3001
      targetPort: 3000
