k8s/server-concrete-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-concrete-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server-concrete
  ports:
    - port: 8081
      targetPort: 8080
