k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # Tell Kubernetes to make an Ingress controller based on the Nginx project
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Configure how our copy of Nginx behaves
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Removes '/api' from request
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # Configure allowable body size
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
# Define our nginx routing
spec:
  tls:
    - hosts:
        - bow-mark.hiits.dev
        - bow-mark-es.hiits.dev
        - app.bowmark.ca
      secretName: bow-mark-tls
  rules:
    - host: bow-mark.hiits.dev
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /graphql/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8080
    - host: app.bowmark.ca
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /graphql/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 8080
